--- a/package.json
+++ b/package.json
@@ -106,6 +106,11 @@
           "description": "Statuses used for extract working issue list (e.g. In Progress, Development In Progress, Test in Progress)",
           "default": "In progress"
         },
+        "jira-plugin.workingIssueShowTimer": {
+          "type": "boolean",
+          "description": "Show/Hide working issue timer in status bar",
+          "default": true
+        },
         "jira-plugin.additionalStatuses": {
           "type": "string",
           "description": "Additional custom statuses, used for manage some Jira wrong behavior",
