--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jira-plugin",
   "displayName": "Jira Plugin",
   "description": "Jira integration for vscode",
-  "version": "0.15.3",
+  "version": "0.16.0",
   "publisher": "gioboa",
   "icon": "images/icons/icon.png",
   "galleryBanner": {
@@ -55,25 +55,65 @@
       "type": "object",
       "title": "Jira configuration",
       "properties": {
+        "jira-plugin.additionalStatuses": {
+          "type": "string",
+          "description": "Additional custom statuses, used for manage some Jira wrong behavior",
+          "default": ""
+        },
         "jira-plugin.baseUrl": {
           "type": "string",
           "description": "Your Jira base URL (e.g. https://your_jira_base_url.com or http://your_jira_base_url.com:your_port)",
           "default": ""
         },
-        "jira-plugin.username": {
+        "jira-plugin.defaultJqlSearch": {
           "type": "string",
-          "description": "Your Jira username or full email for OAuth",
-          "default": ""
+          "description": "Here you can define your default/custom JQL search (n.b: WORKING_PROJECT is the placeholder for the current working project)",
+          "default": "project = 'WORKING_PROJECT' ORDER BY status ASC, updated DESC"
         },
-        "jira-plugin.workingProject": {
-          "type": "string",
-          "description": "Jira working project",
-          "default": ""
+        "jira-plugin.enableCheckForNotifications": {
+          "type": "boolean",
+          "description": "You can manage your Jira unread notifications inside VsCode notification center (n.b: only new Jira versions has notifications)",
+          "default": false
         },
         "jira-plugin.enableWorkingIssue": {
           "type": "boolean",
           "description": "Enable working issue functionality in status bar",
           "default": "true"
+        },
+        "jira-plugin.gitIntegration": {
+          "type": "boolean",
+          "description": "Automatically watch for branch switching and select appropriate project and working issue",
+          "default": false
+        },
+        "jira-plugin.groupTaskAndSubtasks": {
+          "type": "boolean",
+          "description": "Group task and subtasks into explorer",
+          "default": false
+        },
+        "jira-plugin.issueListAutoRefreshInterval": {
+          "type": "integer",
+          "description": "Refresh explorer every x minutes (n.b: setting to 0 disables auto-refresh)",
+          "default": 0
+        },
+        "jira-plugin.numberOfIssuesInList": {
+          "type": "integer",
+          "description": "Number of issues to show in list (n.b: If you define high numbers the research can be slow)",
+          "default": 50
+        },
+        "jira-plugin.projectsToHide": {
+          "type": "string",
+          "description": "Here you can define which projects you want to hide (e.g. PROJECT-KEY-1, PROJECT-KEY-2, PROJECT-KEY-3)",
+          "default": ""
+        },
+        "jira-plugin.strictSSL": {
+          "type": "string",
+          "description": "Request strictSSL param (n.b: if you have problem with certificates, set it to false)",
+          "enum": [
+            "",
+            "true",
+            "false"
+          ],
+          "default": ""
         },
         "jira-plugin.trackingTimeMode": {
           "type": "string",
@@ -91,60 +131,40 @@
           "description": "Number of minutes to wait for the user to return to VSCode before discarding away time in hybrid time tracking mode",
           "default": 30
         },
-        "jira-plugin.worklogMinimumTrackingTime": {
-          "type": "integer",
-          "description": "Minimum tracking time for show the Worklog modal and create Jira worklog (expressed in minutes)",
-          "default": 0
+        "jira-plugin.username": {
+          "type": "string",
+          "description": "Your Jira username or full email for OAuth",
+          "default": ""
+        },
+        "jira-plugin.workingIssueAssignees": {
+          "type": "string",
+          "description": "Assignees used for extract working issue list (e.g. robert.smith, michael.jones) (n.b: CURRENT_USER is the placeholder for the current user)",
+          "default": "CURRENT_USER"
+        },
+        "jira-plugin.workingIssueChangeStatusAfterSelection": {
+          "type": "boolean",
+          "description": "Change working issue status after selection",
+          "default": false
+        },
+        "jira-plugin.workingIssueShowTimer": {
+          "type": "boolean",
+          "description": "Show/Hide working issue timer in status bar",
+          "default": true
         },
         "jira-plugin.workingIssueStatues": {
           "type": "string",
           "description": "Statuses used for extract working issue list (e.g. In Progress, Development In Progress, Test in Progress)",
           "default": "In progress"
         },
-        "jira-plugin.additionalStatuses": {
+        "jira-plugin.workingProject": {
           "type": "string",
-          "description": "Additional custom statuses, used for manage some Jira wrong behavior",
+          "description": "Jira working project",
           "default": ""
         },
-        "jira-plugin.gitIntegration": {
-          "type": "boolean",
-          "description": "Automatically watch for branch switching and select appropriate project and working issue",
-          "default": false
-        },
-        "jira-plugin.groupTaskAndSubtasks": {
-          "type": "boolean",
-          "description": "Group task and subtasks into explorer",
-          "default": false
-        },
-        "jira-plugin.numberOfIssuesInList": {
+        "jira-plugin.worklogMinimumTrackingTime": {
           "type": "integer",
-          "description": "Number of issues to show in list. n.b: If you define high numbers the research can be slow",
-          "default": 50
-        },
-        "jira-plugin.defaultJqlSearch": {
-          "type": "string",
-          "description": "Here you can define your default/custom JQL search (n.b: WORKING_PROJECT is the placeholder for the current working project)",
-          "default": "project = 'WORKING_PROJECT' ORDER BY status ASC, updated DESC"
-        },
-        "jira-plugin.enableCheckForNotifications": {
-          "type": "boolean",
-          "description": "You can manage your Jira unread notifications inside VsCode notification center (n.b: only new Jira versions has notifications)",
-          "default": false
-        },
-        "jira-plugin.strictSSL": {
-          "type": "string",
-          "description": "Request strictSSL param (n.b: if you have problem with certificates, set it to false)",
-          "enum": [
-            "",
-            "true",
-            "false"
-          ],
-          "default": ""
-        },
-        "jira-plugin.projectsToHide": {
-          "type": "string",
-          "description": "Here you can define which projects you want to hide (e.g. PROJECT-KEY-1, PROJECT-KEY-2, PROJECT-KEY-3) - restart required",
-          "default": ""
+          "description": "Minimum tracking time for show the Worklog modal and create Jira worklog (expressed in minutes)",
+          "default": 0
         }
       }
     },
@@ -167,7 +187,7 @@
     },
     "commands": [
       {
-        "command": "jira-plugin.setupCredentialsCommand",
+        "command": "jira-plugin.setupCredentials",
         "title": "Setup credentials",
         "category": "Jira-plugin"
       },
@@ -177,42 +197,42 @@
         "category": "Jira-plugin"
       },
       {
-        "command": "jira-plugin.defaultIssuesCommand",
+        "command": "jira-plugin.defaultIssues",
         "title": "0 - Default JQL Search",
         "category": "Jira-plugin"
       },
       {
-        "command": "jira-plugin.allIssuesCommand",
+        "command": "jira-plugin.allIssues",
         "title": "1 - All issues",
         "category": "Jira-plugin"
       },
       {
-        "command": "jira-plugin.currentSprintCommand",
+        "command": "jira-plugin.currentSprint",
         "title": "2 - Current sprint issues",
         "category": "Jira-plugin"
       },
       {
-        "command": "jira-plugin.issueByIdCommand",
+        "command": "jira-plugin.issueById",
         "title": "3 - Issue by id",
         "category": "Jira-plugin"
       },
       {
-        "command": "jira-plugin.issuesByStatusCommand",
+        "command": "jira-plugin.issuesByStatus",
         "title": "4 - Issues filtered by status",
         "category": "Jira-plugin"
       },
       {
-        "command": "jira-plugin.issuesByStatusAssigneeCommand",
+        "command": "jira-plugin.issuesByStatusAssignee",
         "title": "5 - Issues filtered by status and assignee",
         "category": "Jira-plugin"
       },
       {
-        "command": "jira-plugin.issuesBySummaryCommand",
+        "command": "jira-plugin.issuesBySummary",
         "title": "6 - Issues filtered by summary",
         "category": "Jira-plugin"
       },
       {
-        "command": "jira-plugin.myIssuesByStatusCommand",
+        "command": "jira-plugin.myIssuesByStatus",
         "title": "7 - My issues filtered by status",
         "category": "Jira-plugin"
       },
@@ -222,18 +242,23 @@
         "category": "Jira-plugin"
       },
       {
-        "command": "jira-plugin.changeIssueStatusCommand",
+        "command": "jira-plugin.changeIssueStatus",
         "title": "Change issue status",
         "category": "Jira-plugin"
       },
       {
-        "command": "jira-plugin.changeIssueAssigneeCommand",
+        "command": "jira-plugin.changeIssueAssignee",
         "title": "Change issue assignee",
         "category": "Jira-plugin"
       },
       {
-        "command": "jira-plugin.issueAddCommentCommand",
+        "command": "jira-plugin.issueAddComment",
         "title": "Add comment",
+        "category": "Jira-plugin"
+      },
+      {
+        "command": "jira-plugin.issueAddInternalComment",
+        "title": "Add internal comment",
         "category": "Jira-plugin"
       },
       {
@@ -256,7 +281,7 @@
         }
       },
       {
-        "command": "jira-plugin.createIssueCommand",
+        "command": "jira-plugin.createIssue",
         "title": "Create issue",
         "category": "Jira-plugin",
         "icon": {
@@ -278,42 +303,42 @@
           "group": "group_by"
         },
         {
-          "command": "jira-plugin.defaultIssuesCommand",
+          "command": "jira-plugin.defaultIssues",
           "when": "view == issuesExplorer",
           "group": "jql"
         },
         {
-          "command": "jira-plugin.allIssuesCommand",
+          "command": "jira-plugin.allIssues",
           "when": "view == issuesExplorer",
           "group": "jql"
         },
         {
-          "command": "jira-plugin.currentSprintCommand",
+          "command": "jira-plugin.currentSprint",
           "when": "view == issuesExplorer",
           "group": "jql"
         },
         {
-          "command": "jira-plugin.issueByIdCommand",
+          "command": "jira-plugin.issueById",
           "when": "view == issuesExplorer",
           "group": "jql"
         },
         {
-          "command": "jira-plugin.issuesByStatusCommand",
+          "command": "jira-plugin.issuesByStatus",
           "when": "view == issuesExplorer",
           "group": "jql"
         },
         {
-          "command": "jira-plugin.issuesByStatusAssigneeCommand",
+          "command": "jira-plugin.issuesByStatusAssignee",
           "when": "view == issuesExplorer",
           "group": "jql"
         },
         {
-          "command": "jira-plugin.issuesBySummaryCommand",
+          "command": "jira-plugin.issuesBySummary",
           "when": "view == issuesExplorer",
           "group": "jql"
         },
         {
-          "command": "jira-plugin.myIssuesByStatusCommand",
+          "command": "jira-plugin.myIssuesByStatus",
           "when": "view == issuesExplorer",
           "group": "jql"
         },
@@ -328,24 +353,29 @@
           "group": "navigation"
         },
         {
-          "command": "jira-plugin.createIssueCommand",
+          "command": "jira-plugin.createIssue",
           "when": "view == issuesExplorer",
           "group": "navigation"
         }
       ],
       "view/item/context": [
         {
-          "command": "jira-plugin.changeIssueStatusCommand",
+          "command": "jira-plugin.changeIssueStatus",
           "group": "1_issue",
           "when": "view == issuesExplorer && viewItem == IssueItem"
         },
         {
-          "command": "jira-plugin.issueAddCommentCommand",
+          "command": "jira-plugin.issueAddComment",
           "group": "1_issue",
           "when": "view == issuesExplorer && viewItem == IssueItem"
         },
         {
-          "command": "jira-plugin.changeIssueAssigneeCommand",
+          "command": "jira-plugin.issueAddInternalComment",
+          "group": "1_issue",
+          "when": "view == issuesExplorer && viewItem == IssueItem"
+        },
+        {
+          "command": "jira-plugin.changeIssueAssignee",
           "group": "1_issue",
           "when": "view == issuesExplorer && viewItem == IssueItem"
         },
