--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jira-plugin",
   "displayName": "Jira Plugin",
-  "description": "Jira integration for vscode",
+  "description": "Manage your on-premises/cloud Jira in vscode",
   "version": "0.16.1",
   "publisher": "gioboa",
   "icon": "images/icons/icon.png",
