--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "jira-plugin",
   "displayName": "Jira Plugin",
-  "description": "Jira integration for vscode",
-  "version": "0.16.1",
+  "description": "Manage your on-premises/cloud Jira in vscode",
+  "version": "0.17.0",
   "publisher": "gioboa",
   "icon": "images/icons/icon.png",
   "galleryBanner": {
