--- a/package.json
+++ b/package.json
@@ -105,6 +105,11 @@
           "description": "Here you can define which projects you want to hide (e.g. PROJECT-KEY-1, PROJECT-KEY-2, PROJECT-KEY-3)",
           "default": ""
         },
+        "jira-plugin.requestsTimeout": {
+          "type": "integer",
+          "description": "Jira requests timeout (expressed in minutes)",
+          "default": 1
+        },
         "jira-plugin.strictSSL": {
           "type": "string",
           "description": "Request strictSSL param (n.b: if you have problem with certificates, set it to false)",
