feat: added projects key mapping setting

--- a/package.json
+++ b/package.json
@@ -100,6 +100,14 @@
           "description": "Number of issues to show in list (n.b: If you define high numbers the research can be slow)",
           "default": 50
         },
+        "jira-plugin.projectKeyMapping": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "description": "Setting for map projects key for git integration (e.g. JIRAKEY=CUSTOMKEY)",
+          "default": []
+        },
         "jira-plugin.projectsToHide": {
           "type": "string",
           "description": "Here you can define which projects you want to hide (e.g. PROJECT-KEY-1, PROJECT-KEY-2, PROJECT-KEY-3)",
