--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jira-plugin",
   "displayName": "Jira Plugin",
   "description": "Manage your on-premises/cloud Jira in vscode",
-  "version": "0.20.0",
+  "version": "0.21.0",
   "publisher": "gioboa",
   "icon": "images/icons/icon.png",
   "galleryBanner": {
@@ -280,8 +280,13 @@
         "category": "Jira-plugin"
       },
       {
-        "command": "jira-plugin.copyJiraSummary",
-        "title": "Copy Jira Key+Summary",
+        "command": "jira-plugin.copyIssueKeySummary",
+        "title": "Copy Jira issue Key+Summary",
+        "category": "Jira-plugin"
+      },
+      {
+        "command": "jira-plugin.copyIssueRemoteUrl",
+        "title": "Copy Jira issue remote url",
         "category": "Jira-plugin"
       },
       {
@@ -398,7 +403,12 @@
           "when": "view == issuesExplorer && viewItem == IssueItem"
         },
         {
-          "command": "jira-plugin.copyJiraSummary",
+          "command": "jira-plugin.copyIssueKeySummary",
+          "group": "1_issue",
+          "when": "view == issuesExplorer && viewItem == IssueItem"
+        },
+        {
+          "command": "jira-plugin.copyIssueRemoteUrl",
           "group": "1_issue",
           "when": "view == issuesExplorer && viewItem == IssueItem"
         },
