--- a/package.json
+++ b/package.json
@@ -269,6 +269,16 @@
         "category": "Jira-plugin"
       },
       {
+        "command": "jira-plugin.setWorkingProject",
+        "title": "Set Working Project",
+        "category": "Jira-plugin"
+      },
+      {
+        "command": "jira-plugin.setWorkingIssue",
+        "title": "Set Working Issue",
+        "category": "Jira-plugin"
+      },
+      {
         "command": "jira-plugin.changeIssueStatus",
         "title": "Change issue status",
         "category": "Jira-plugin"
