feat: Added 'Stop Working On Issue' functionality
Added ability to 'Stop Working On Issue' from command palette and submit worklog comment immediately.

--- a/package.json
+++ b/package.json
@@ -279,6 +279,11 @@
         "category": "Jira-plugin"
       },
       {
+        "command": "jira-plugin.stopWorkingIssue",
+        "title": "Stop Working On Issue",
+        "category": "Jira-plugin"
+      },
+      {
         "command": "jira-plugin.changeIssueStatus",
         "title": "Change issue status",
         "category": "Jira-plugin"
