--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jira-plugin",
   "displayName": "Jira Plugin",
   "description": "Manage your on-premises/cloud Jira in vscode",
-  "version": "0.21.0",
+  "version": "0.22.0",
   "publisher": "gioboa",
   "icon": "images/icons/icon.png",
   "galleryBanner": {
@@ -154,6 +154,15 @@
           "description": "Your Jira username or full email for OAuth",
           "default": ""
         },
+        "jira-plugin.workingIssueFilter": {
+          "type": "string",
+          "description": "Choose which internal filter constant is used for 'Select Working Issue' filter. Note: Requires reload on change",
+          "enum": [
+            "WORKING_ISSUES",
+            "ALL"
+          ],
+          "default": "WORKING_ISSUES"
+        },
         "jira-plugin.workingIssueAssignees": {
           "type": "string",
           "description": "Assignees used for extract working issue list (e.g. robert.smith, michael.jones) (n.b: CURRENT_USER is the placeholder for the current user)",
@@ -257,6 +266,21 @@
       {
         "command": "jira-plugin.favouritesFilters",
         "title": "8 - Favourites filters",
+        "category": "Jira-plugin"
+      },
+      {
+        "command": "jira-plugin.setWorkingProject",
+        "title": "Set Working Project",
+        "category": "Jira-plugin"
+      },
+      {
+        "command": "jira-plugin.setWorkingIssue",
+        "title": "Set Working Issue",
+        "category": "Jira-plugin"
+      },
+      {
+        "command": "jira-plugin.stopWorkingIssue",
+        "title": "Stop Working On Issue",
         "category": "Jira-plugin"
       },
       {
@@ -421,16 +445,16 @@
     }
   },
   "devDependencies": {
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^12.0.10",
-    "husky": "^3.0.0",
-    "mocha": "^6.0.2",
-    "prettier": "^1.18.2",
-    "tslint": "^5.18.0",
-    "typescript": "^3.5.2",
-    "vscode": "^1.1.35"
+    "@types/mocha": "^8.0.3",
+    "@types/node": "^14.11.2",
+    "husky": "^4.3.0",
+    "mocha": "^8.1.3",
+    "prettier": "^2.1.2",
+    "tslint": "^6.1.3",
+    "typescript": "^3.9.7",
+    "vscode": "^1.1.37"
   },
   "dependencies": {
-    "jira-connector": "^2.15.6"
+    "jira-connector": "^3.1.0"
   }
 }
